--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.461.0",
     "next": "14.2.16",
     "react": "^18",
